[gd_scene load_steps=6 format=2]

[ext_resource path="res://cards/BlankCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://cards/Card.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.439, 0.01, 0.626 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.492504, 1, 0.737525 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.0617449, 1, 0.102285 )

[node name="Card" type="Spatial"]
script = ExtResource( 2 )

[node name="CardImage" parent="." instance=ExtResource( 1 )]
width = 1.0
depth = 1.5

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0629149, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.000127085, 0 )
shape = SubResource( 1 )

[node name="OverlapDetector" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0629149, 0 )
input_ray_pickable = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="OverlapDetector"]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0.204341, 0 )
shape = SubResource( 2 )

[node name="CoreDetector" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0629149, 0 )
input_ray_pickable = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="CoreDetector"]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0.204341, 0 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="input_event" from="StaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_entered" from="StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody" to="." method="_on_StaticBody_mouse_exited"]
